service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-ko
spec:
  selector:
    app: welcome-ko
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: welcome-en
spec:
  selector:
    app: welcome-en
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: welcome-ch
spec:
  selector:
    app: welcome-ch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
