ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /ko
        pathType: Prefix
        backend:
          service:
            name: welcome-ko
            port:
              number: 80
      - path: /en
        pathType: Prefix
        backend:
          service:
            name: welcome-en
            port:
              number: 80
      - path: /zh
        pathType: Prefix
        backend:
          service:
            name: welcome-zh
            port:
              number: 80
